k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pilot-app
spec:
  type: ClusterIP
  selector:
    app: pilot-app
  ports:
  - port: 80
    targetPort: 3000
